@@ -4,6 +4,8 @@
 
 Version 5.21.0
 
+New: The filesystem read/write statistics is now displayed in Monit GUI and CLI.
+
 New: The Monit HTTP interface now allows to set the SSL/TLS version as well. The
 syntax follows the generic SSL/TLS options settings, which was introduced in
 Monit 5.15, example:
